# BadCompiler

./: CMakeLists.txt  README.md  main.cpp
include/: Optimization.h  Parser.h  SymbolTable.h  common.h  scanner.h
source/: Optimization.cpp  Parser.cpp  SymbolTable.cpp  common.cpp  scanner.cpp
